@@ -1,6 +1,7 @@
 2006-11-09  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-make-friend-from-url): Support my object.
+	(mixi-make-object-from-url): Ditto.
 
 2006-11-08  OHASHI Akira  <bg66@koka-in.org>
 
